@@ -2,5 +2,6 @@
 #define PROMPT "sysrq> "
 #define SYSRQ_TRIGGER_PATH "/proc/sysrq-trigger"
 #define AUTH_FILE "/etc/sysrqd.secret"
+#define PID_FILE "/var/run/sysrqd.pid"
 #define SYSRQD_PRIO -19
 #define SYSRQD_LISTEN_PORT 680
